--- a/app1/templates/dashboard.html
+++ b/app1/templates/dashboard.html
@@ -48,6 +48,14 @@
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
  {% else %}
+ <div class="container">
+  <div class="row mt-4">
+      <div class="col-md-12" >
+        <img src="{% static 'images\welcomes.png'%}" alt="Track Sales Man" title="Welcome" id="wlcm_img">
+                    
+      </div>
+  </div>
+ </div>
  {% endif %}
  
 {% endblock content %}
