--- a/app1/templates/signup.html
+++ b/app1/templates/signup.html
@@ -25,7 +25,7 @@
                 <input style="margin-top: 20px;" class="button" type="Submit" value="Sign Up">
             </form>
 
-            <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
+            <p> have an account? </span><a href="{% url 'login' %}">Login</a></p>
 
         </div>
     </div>
